--- a/css/print.css
+++ b/css/print.css
@@ -9,6 +9,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%;
+}
   
 body {
   font-family: "Releway", Arial, sans-serif;
