--- a/css/main.css
+++ b/css/main.css
@@ -56,26 +56,26 @@ h2 {
   grid-template-columns: 37.27% 62.73%;
   grid-template-rows: minmax(33rem, max-content) 1.02fr 0.169fr 1.625fr 0.237fr 0.479fr;
   grid-template-areas:
-  	"id name"
+  	"pic name"
   	"contact formation"
   	"description formation"
   	"description experiences"
-  	"description recommandation"
-    "hobbies recommandation";
+  	"description recommandations"
+    "hobbies recommandations";
 }
 
-.id__pic {
+.pic__element {
   display: block;
   margin: 6.4rem auto 4rem auto;
 }
 
-.id__pic img {
+.pic__element img {
   width: auto;
   max-height: 100%;
 }
 
-#id {
-  grid-area: id;
+#pic {
+  grid-area: pic;
   padding: 0;
 }
 
@@ -94,8 +94,8 @@ h2 {
   padding: 2.7rem 5.5rem 5.1rem 6.5rem;
 }
 
-#recommandation {
-  grid-area: recommandation;
+#recommandations {
+  grid-area: recommandations;
   padding: 2.7rem 5.5rem 5.1rem 6.5rem;
 }
 
@@ -139,12 +139,21 @@ h2 {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 22.58%;
+  width: 21.4rem;
 }
     
 .event {
-  width: 54.84%;
-  margin: 0 0 5rem 12.7rem;
+  width: 33.4rem;
+  margin: 0.5rem 0 5rem 3rem;
+}
+
+.event--place {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.event--workplace {
+  line-height: 4.4rem;
 }
 
 /* -----------------TITLE H2----------------- */
@@ -213,12 +222,12 @@ h2 {
     grid-template-columns: 100%;
     grid-template-rows: repeat(8, max-content);
     grid-template-areas: 
-      "id"
+      "pic"
       "name"
       "description"
       "experiences"
       "formation"
-      "recommandation"
+      "recommandations"
       "hobbies"
       "contact";
   }
@@ -247,17 +256,13 @@ h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 85.18%;
-  }
-  
-  .date {
-    width: 85.18%;
+    width: 21.4rem;
     margin: 0 0 2.5rem 0;
   }
 
   .event {
-    width: 85.18%;
-    margin: 0 0 5rem 0;
+    min-width: 15rem;
+    margin: 0.5rem 0 5rem 3rem;
   }
 
   #description .title_aside_text {
@@ -290,29 +295,29 @@ h2 {
     grid-template-columns: 384px 806px;
     grid-template-rows: minmax(33rem, max-content) repeat(5, auto);
     grid-template-areas:
-      "id name"
+      "pic name"
       "contact formation"
       "description formation"
       "description experiences"
-      "description recommandation"
-      "hobbies recommandation";
+      "description recommandations"
+      "hobbies recommandations";
     grid-gap: 2vw;
     margin: 2vw;
     justify-content: space-evenly;
   }
   
-  .id__pic {
+  .pic__element {
     display: block;
     margin: 6.4rem auto 4rem auto;
   }
   
-  .id__pic img {
+  .pic__element img {
     width: auto;
     max-height: 100%;
   }
   
-  #id {
-    grid-area: id;
+  #pic {
+    grid-area: pic;
     padding: 0;
   }
   
@@ -331,8 +336,8 @@ h2 {
     padding: 2.7rem 5.5rem 5.1rem 6.5rem;
   }
   
-  #recommandation {
-    grid-area: recommandation;
+  #recommandations {
+    grid-area: recommandations;
     padding: 2.7rem 5.5rem 5.1rem 6.5rem;
   }
   
@@ -357,6 +362,7 @@ h2 {
     height: 100%;
     z-index: -2;
     overflow: hidden;
+    opacity: 0.2;
   }
 
   #fullscreen-video-bg video{
@@ -372,7 +378,11 @@ h2 {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-color: #81C784;
-    opacity: 0.7;
+    background: rgb(200,230,201);
+    background: -moz-radial-gradient(circle, rgba(200,230,201,1) 0%, rgba(102,187,106,1) 100%);
+    background: -webkit-radial-gradient(circle, rgba(200,230,201,1) 0%, rgba(102,187,106,1) 100%);
+    background: radial-gradient(circle, rgba(200,230,201,1) 0%, rgba(102,187,106,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#c8e6c9",endColorstr="#66bb6a",GradientType=1);
+    opacity: 0.6;
   }
 }
