--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -61,28 +61,28 @@ h2 {
     grid-template-columns: 100vw;
     grid-template-rows: 100vh repeat(7, auto);
     grid-template-areas: 
-    "id"
+    "pic"
     "name"
     "description"
     "experiences"
     "formation"
-    "recommandation"
+    "recommandations"
     "hobbies"
     "contact";
   }
 
-  .id__pic {
+  .pic__element {
     display: block;
     margin: 6.4rem auto 4rem auto;
   }
   
-  .id__pic img {
+  .pic__element img {
     width: auto;
     max-height: 100%;
   }
   
-  #id {
-    grid-area: id;
+  #pic {
+    grid-area: pic;
     padding: 0;
   }
   
@@ -94,19 +94,15 @@ h2 {
   #formation {
     grid-area: formation;
     padding: 2.7rem 5.5rem 5.1rem 6.5rem;
-    overflow-y: unset;
-    height: max-content;
   }
   
   #experiences {
     grid-area: experiences;
     padding: 2.7rem 5.5rem 5.1rem 6.5rem;
-    overflow-y: unset;
-    height: max-content;
   }
   
-  #recommandation {
-    grid-area: recommandation;
+  #recommandations {
+    grid-area: recommandations;
     padding: 2.7rem 5.5rem 5.1rem 6.5rem;
   }
   
@@ -137,7 +133,7 @@ h2 {
   }
         
   .event {
-    margin: 0 0 5rem 0;
+    margin: 0 0 5rem 3rem;
   }
 
   /* -----------------TITLE H2----------------- */
@@ -207,26 +203,26 @@ h2 {
     grid-template-columns: 37.27vw 62.73vw;
     grid-template-rows: minmax(33rem, max-content) 1.02fr 0.169fr 1.625fr 0.237fr 0.479fr;
     grid-template-areas:
-    "id name"
+    "pic name"
     "contact formation"
     "description formation"
     "description experiences"
-    "description recommandation"
-    "hobbies recommandation";
+    "description recommandations"
+    "hobbies recommandations";
   }
       
-  .id__pic {
+  .pic__element {
     display: block;
     margin: 6.4rem auto 4rem auto;
   }
   
-  .id__pic img {
+  .pic__element img {
     width: auto;
     max-height: 100%;
   }
   
-  #id {
-    grid-area: id;
+  #pic {
+    grid-area: pic;
     padding: 0;
   }
   
@@ -245,8 +241,8 @@ h2 {
     padding: 2.7rem 5.5rem 5.1rem 6.5rem;
   }
       
-  #recommandation {
-    grid-area: recommandation;
+  #recommandations {
+    grid-area: recommandations;
     padding: 2.7rem 5.5rem 5.1rem 6.5rem;
   }
       
@@ -285,12 +281,11 @@ h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 22.58%;
+    width: 21.4rem;
   }
           
   .event {
-    width: 54.84%;
-    margin: 0 0 5rem 12.7rem;
+    margin: 0.5rem 0 5rem 3rem;
   }
 
   /* -----------------TITLE----------------- */
