--- a/css/main.css
+++ b/css/main.css
@@ -28,12 +28,14 @@ body {
 
 .name--green {
   font-size: 4.3rem;
+  line-height: 4.3rem;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .name--grey {
   font-size: 4.3rem;
+  line-height: 4.3rem;
   font-weight: lighter;
   text-transform: uppercase;
 }
@@ -45,7 +47,14 @@ h2 {
 }
 
 .name__subtitle {
+  margin-top: 2.6rem;
   font-size: 2rem;
+}
+
+#name div{
+  height: 0.2rem;
+  width: 7.7rem;
+  margin-top: 0.8rem;
 }
 
 
@@ -119,6 +128,7 @@ h2 {
   flex-wrap: wrap;
   overflow-y: auto;
   max-height: 45.6rem;
+  padding-top: 4.7rem;
 }
 
 #experiences .containerA {
@@ -127,12 +137,34 @@ h2 {
   flex-wrap: wrap;
   overflow-y: auto;
   max-height: 62.4rem;
+  padding-top: 4.7rem;
 }
 
 .containerB {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-top: 4.7rem;
+}
+
+.containerB p{
+  display: block;
+  width: 40%;
+  justify-content: space-between;
+}
+
+.containerB p:nth-child(n+3){
+  margin-top: 4rem;
+}
+
+.recommandation--name{
+  text-transform: uppercase;
+}
+
+.recommandation--informations{
+  display: inline-block;
+  margin-top: 1.1rem;
+  line-height: 2.3rem;
 }
 
 .date {
@@ -140,6 +172,7 @@ h2 {
   flex-direction: row;
   flex-wrap: nowrap;
   width: 21.4rem;
+  margin: 0 0 2rem 0;
 }
     
 .event {
@@ -148,12 +181,14 @@ h2 {
 }
 
 .event--place {
+  font-size: 1.5rem;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .event--workplace {
-  line-height: 4.4rem;
+  display: inline-block;
+  margin: 1.6rem 0;
 }
 
 /* -----------------TITLE H2----------------- */
@@ -182,7 +217,7 @@ h2 {
 .title_section {
   display: flex;
   align-items: center;
-  margin-bottom: 7.2rem;
+  margin-bottom: 0.9rem;
 }
 
 /* -----------------ICON----------------- */
@@ -252,12 +287,32 @@ h2 {
     flex-direction: column;
   }
 
+  .containerB p{
+    display: block;
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  .containerB p:nth-child(n+2){
+    margin-top: 4rem;
+  }
+  
+  .recommandation--name{
+    text-transform: uppercase;
+  }
+  
+  .recommandation--informations{
+    display: inline-block;
+    line-height: 2.3rem;
+    margin-top: 1.1rem;
+  }
+
   .date {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     width: 21.4rem;
-    margin: 0 0 2.5rem 0;
+    margin: 0 0 2rem 0;
   }
 
   .event {
