--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -28,12 +28,14 @@ body {
   
 .name--green {
   font-size: 3rem;
+  line-height: 3rem;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .name--grey {
   font-size: 3rem;
+  line-height: 3rem;
   font-weight: lighter;
   text-transform: uppercase;
 }
@@ -43,14 +45,21 @@ body {
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.39rem;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .name__subtitle {
-  font-size: 1.5rem;
+  margin-top: 1.81rem;
+  font-size: 1.39rem;
   text-align: center;
+}
+
+#name div{
+  height: 0.2rem;
+  width: 7.7rem;
+  margin-top: 0.8rem;
 }
 
 /* -----------------MEDIA QUERRIES----------------- */
@@ -123,17 +132,48 @@ h2 {
   .containerA, .containerB {
     display:flex;
     flex-direction: column;
+    padding-top: 4.7rem;
+  }
+
+  .containerB p{
+    display: block;
+    justify-content: space-around;
+  }
+  
+  .containerB p:nth-child(n+2){
+    margin-top: 4rem;
+  }
+
+  .recommandation--name{
+    text-transform: uppercase;
+  }
+  
+  .recommandation--informations{
+    display: inline-block;
+    margin-top: 1.1rem;
+    line-height: 2.3rem;
   }
         
   .date {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    margin: 0 0 2.5rem 0;
+    margin: 0 0 2rem 0;
   }
         
   .event {
     margin: 0 0 5rem 3rem;
+  }
+
+  .event--place {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  .event--workplace {
+    display: inline-block;
+    margin: 1.6rem 0;
   }
 
   /* -----------------TITLE H2----------------- */
@@ -162,7 +202,7 @@ h2 {
   .title_section {
     display: flex;
     align-items: center;
-    margin-bottom: 7.2rem;
+    margin-bottom: 0.9rem;
   }
 
   /* -----------------ICON----------------- */
@@ -262,13 +302,35 @@ h2 {
       
   .containerA, .containerB {
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
+    padding-top: 4.7rem;
+  }
+
+  .containerB p{
+    display: block;
+    width: 40%;
+    justify-content: space-between;
+  }
+  
+  .containerB p:nth-child(n+3){
+    margin-top: 4rem;
+  }
+
+  .recommandation--name{
+    text-transform: uppercase;
+  }
+  
+  .recommandation--informations{
+    display: inline-block;
+    margin-top: 1.1rem;
+    line-height: 2.3rem;
   }
   
   #experiences .containerA {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    
   }
   
   .containerB {
@@ -282,10 +344,22 @@ h2 {
     flex-direction: row;
     flex-wrap: nowrap;
     width: 21.4rem;
+    margin: 0 0 2rem 0;
   }
           
   .event {
     margin: 0.5rem 0 5rem 3rem;
+  }
+
+  .event--place {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  .event--workplace {
+    display: inline-block;
+    margin: 1.6rem 0;
   }
 
   /* -----------------TITLE----------------- */
@@ -314,7 +388,7 @@ h2 {
   .title_section {
     display: flex;
     align-items: center;
-    margin-bottom: 7.2rem;
+    margin-bottom: 0.9rem;
   }
 
   /* -----------------ICON----------------- */
