--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ h2 {
 .wrapper {
   display: grid;
   grid-template-columns: 37.27% 62.73%;
-  grid-template-rows: minmax(33rem, max-content) 1.02fr 0.169fr 1.625fr 0.237fr 0.479fr;
+  grid-template-rows: minmax(33rem, max-content) repeat(5, auto);
   grid-template-areas:
   	"pic name"
   	"contact formation"
@@ -251,11 +251,11 @@ h2 {
 
 /* -----------------MEDIA QUERRIES----------------- */
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 910px) {
   
   .wrapper {
     grid-template-columns: 100%;
-    grid-template-rows: repeat(8, max-content);
+    grid-template-rows: repeat(8, auto);
     grid-template-areas: 
       "pic"
       "name"
@@ -340,6 +340,10 @@ h2 {
     text-align: center;
   }
   
+  #name div{
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 }
 
