--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -102,17 +102,17 @@ h2 {
   
   #formation {
     grid-area: formation;
-    padding: 2.7rem 4rem 5.1rem 4rem;
+    padding: 2.7rem 2rem 5.1rem 2rem;
   }
   
   #experiences {
     grid-area: experiences;
-    padding: 2.7rem 4rem 5.1rem 4rem;
+    padding: 2.7rem 2rem 5.1rem 2rem;
   }
   
   #recommandations {
     grid-area: recommandations;
-    padding: 2.7rem 4rem 5.1rem 4rem;
+    padding: 2.7rem 2rem 5.1rem 2rem;
   }
   
   #description {
@@ -158,11 +158,11 @@ h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    margin: 0 0 2rem 0;
+    margin: 0 0 1rem 0;
   }
         
   .event {
-    margin: 0 0 5rem 3rem;
+    margin: 0 0 2.5rem .9rem;
   }
 
   .event--place {
@@ -184,15 +184,15 @@ h2 {
   }
   
   #description .title_aside_text {
-    padding: 3.6rem 4rem 3.9rem 4rem;
+    padding: 3.6rem 2rem 3.9rem 2rem;
   }
   
   #hobbies .title_aside_text {
-    padding: 3.6rem 4rem 3.9rem 4rem;
+    padding: 3.6rem 2rem 3.9rem 2rem;
   }
   
   #contact .title_aside_text {
-    padding: 3.6rem 4rem 3.9rem 4rem;
+    padding: 3.6rem 2rem 3.9rem 2rem;
   }
 
   #contact p:nth-child(n+2) {
@@ -226,12 +226,12 @@ h2 {
 
   .double_point {
     height: 1.2rem;
-    margin-right: 1.8rem;
+    margin-right: .9rem;
   }
   
   .point {
     height: 1.2rem;
-    margin-right: 1.8rem;
+    margin-right: .9rem;
   }
 
   #name div{
