--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* -----------------FONT----------------- */
 
-@import 'css/font.css';
+@import '../css/font.css';
 
 /* -----------------NORMALIZE----------------- */
 
